refer jira AXIS2C-1469